projects/vb6parse/snapshots/parsers/files/vb6_code/project/screen_capture_project_load.snap
---
source: projects/vb6parse/tests/files/vb6_code/project.rs
assertion_line: 786
expression: project
---
project_type: Exe
references:
  - uuid: 00020430-0000-0000-c000-000000000046
    unknown1: "2.0"
    unknown2: "0"
    path: "..\\..\\..\\Windows\\SysWOW64\\stdole2.tlb"
    description: OLE Automation
  - uuid: e1211242-8e94-11d1-8808-00c04fc2c602
    unknown1: "1.0"
    unknown2: "0"
    path: "..\\..\\WINDOWS\\system32\\dx7vb.dll"
    description: DirectX 7 for Visual Basic Type Library
objects: []
modules: []
classes: []
related_documents: []
property_pages: []
designers: []
forms:
  - FormScreenCapture.frm
user_controls: []
user_documents: []
other_properties:
  MS Transaction Server:
    AutoRefresh: "1"
properties:
  unused_control_info: Remove
  upgrade_controls: Upgrade
  res_file_32_path: ""
  icon_form: FormScreenCapture
  startup: FormScreenCapture
  help_file_path: ""
  title: Screen Capture Demonstration
  exe_32_file_name: ScreenCapture.exe
  exe_32_compatible: ""
  dll_base_address: 0
  path_32: ""
  command_line_arguments: ""
  name: Project_ScreenCapture
  description: ""
  debug_startup_component: ""
  help_context_id: "0"
  compatibility_mode: NoCompatibility
  version_32_compatibility: ""
  version_info:
    major: 1
    minor: 0
    revision: 12
    auto_increment_revision: 1
    company_name: www.tannerhelland.com
    file_description: ""
    copyright: ""
    trademark: ""
    product_name: ""
    comments: Downloaded from www.tannerhelland.com
  server_support_files: Local
  conditional_compile: ""
  compilation_type:
    NativeCode:
      optimization_type: FavorFastCode
      favor_pentium_pro: "True"
      code_view_debug_info: NotCreated
      aliasing: AssumeNoAliasing
      bounds_check: NoBoundsCheck
      overflow_check: NoOverflowCheck
      floating_point_check: NoFloatingPointErrorCheck
      pentium_fdiv_bug_check: NoPentiumFDivBugCheck
      unrounded_floating_point: Allow
  start_mode: StandAlone
  unattended: Interactive
  retained: UnloadOnExit
  thread_per_object: 0
  threading_model: ApartmentThreaded
  max_number_of_threads: 1
  debug_startup_option: WaitForComponentCreation
  use_existing_browser: Use
